MapStruct feature added [simplified implementation between beans]
