# ToyRobot/src/main/java/com/idealo/toyrobot/controller/RobotController.java
@@ -2,12 +2,12 @@ package com.idealo.toyrobot.controller;
 
 import static com.idealo.toyrobot.utils.URLS.URL_TOY_ROBOT_CREATE;
 import static com.idealo.toyrobot.utils.URLS.URL_TOY_ROBOT_DELETE;
+import static com.idealo.toyrobot.utils.URLS.URL_TOY_ROBOT_GET_ALL;
 import static com.idealo.toyrobot.utils.URLS.URL_TOY_ROBOT_GET_BY_ID;
 import static com.idealo.toyrobot.utils.URLS.URL_TOY_ROBOT_UPDATE;
 
 import java.util.List;
 
-import static com.idealo.toyrobot.utils.URLS.URL_TOY_ROBOT_GET_ALL;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -15,10 +15,11 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
+
+import com.example.model.RobotDetailsResponse;
 import com.example.model.RobotRequestDto;
 import com.example.model.RobotResponseDto;
 import com.idealo.toyrobot.business.RobotBusiness;
-import com.idealo.toyrobot.models.Robot;
 
 @RestController
 public class RobotController {
@@ -39,7 +40,7 @@ public class RobotController {
 	}
 
 	@RequestMapping(value = URL_TOY_ROBOT_GET_BY_ID, method = RequestMethod.GET)
-	public ResponseEntity<Robot> getRobotById(@PathVariable("id") String id) {
+	public ResponseEntity<RobotDetailsResponse> getRobotById(@PathVariable("id") String id) {
 		return ResponseEntity.ok().body(robotBusiness.getRobotById(id));
 	}
 
@@ -50,7 +51,7 @@ public class RobotController {
 	}
 	
 	@RequestMapping(value = URL_TOY_ROBOT_GET_ALL, method = RequestMethod.GET)
-	public ResponseEntity<List<Robot>> getAllRobots() {
+	public ResponseEntity<List<RobotDetailsResponse>> getAllRobots() {
 		return ResponseEntity.ok().body(robotBusiness.getAllRobots());
 	}
 }
